syntax = "proto3";

package coalescing;

service CoalescingService {
    rpc GetResponse (Request) returns (Response) {}
    rpc WithoutCoalescing (Request) returns (Response) {}
}

message Request {
    int64 id = 1;
}

message Response {
    int64 channel_id = 1;
    int64 message_id = 2;
    int32 bucket = 3;
    string content = 4;
    int64 author_id = 5;
}